--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -28,10 +28,14 @@ hr
   width: 80%
 
 body
+html
   color: $black
   font-size: 1em
   line-height: 1.5
   box-sizing: border-box
+  height: 100%
+  width: 100%
+  min-height: 100%
 
 header
   background: $grey
@@ -53,26 +57,37 @@ header
 
 footer
   background-color: gray
-  color: white
+  color: #4d4d4d
   text-align: center
   padding: 10px
   margin-top: 20px
   font-weight: bold
+  font-size: 12px
+
+.footer-row
+  display: table
+  width: 100%
+  table-layout: fixed
+  border-spacing: 10px
+
+.footer-column
+  display: table-cell
+  vertical-align: middle
+
+.imgFooterLogo
+  max-height: 60px
+
+.imgFooterIcon
+  width: 50px
 
 .content
   padding: 0
-  height: 100%
-  width: 100%
+  min-height: 100%
 
 .div-home-panel
-  display: table
   position: relative
   width: 100%
   height: 100%
-  -webkit-background-size: cover
-  -moz-background-size: cover
-  background-size: cover
-  -o-background-size: cover
   text-align: center
   z-index: 1
 
@@ -80,6 +95,7 @@ footer
   margin: 0 auto
   max-width: 600px
   height: 100%
+  text-align: center
 
 .p-hash-tag-text
   font-family: Verdana
@@ -92,28 +108,48 @@ footer
   max-width: 600px
   height: auto
 
-@media screen and (max-width: 480px)
-  .div-home-panel
-    margin: 0 auto
-    background-color: red
-  .img-responsive
-    width: 100%;
-    max-width: 50px
-    height: auto;
-
-
 .div-float-panel
   float: right
   position: fixed
   top: 20px
   right: 20px
   z-index: 2
-  
+
 .img_float
   max-width: 50px
 
 .clearfix
   background-color: transparent
+  z-index: 9
+
+
+@media screen and (max-width:375px)
+  .div-float-panel
+    display: none
+  .p-hash-tag-text
+    font-size: 20px
+  .img_float
+    width: 30px
+  .p-footer-webmaster
+    display: none;
+
+
+@media screen and (min-width:376px) and (max-width:480px)
+  .div-home-panel
+    margin: 0 auto
+  .img-responsive
+    max-width: 100%
+    height: auto
+  .p-hash-tag-text
+    font-size: 30px
+  .img_float
+    width: 40px;
+
+
+@media screen and (min-width:481px)
+  .img_float
+    width: 50px;
+
 
 .fb-page, .fb-page:before, .fb-page:after
   border: 1px solid #ccc
