Vložení blogu na stránku pomocí XML

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -91,6 +91,45 @@ footer
   text-align: center
   z-index: 1
 
+.div-blog-panel
+  width: 80%
+  margin: 0 auto
+  text-align: left
+
+.div-blog-item
+  border-bottom: 1px solid silver
+  padding: 20px
+
+.div-blog-item:hover
+  background-color: rgba(150,150,150,0.1)
+  border-radius: 10px
+
+.p-blog-header
+  font-weight: bold
+  color: rgba(215, 0, 72, 1)
+  text-transform:uppercase
+  padding: 5px
+
+.p-blog-header:first-letter
+  font-size: 25px
+
+.img-blog-item
+  max-width: 150px
+  max-height: 150px
+
+.div-content-text
+  width: 90%
+  margin: 0 auto
+
+.td-blog-text
+  vertical-align: top
+  padding-left: 20px
+
+.p-text-autor
+  text-align: right
+  padding-right: 50px
+  font-style: italic
+
 .div-facebook-panel
   margin: 0 auto
   max-width: 600px
